Revision history for Pod-TreeWalker

{{$NEXT}}
    - Enabled creation of a separate document for the Listener
      role from existing pod in file 
        'lib/Pod/TreeWalker/Listener.rakumod'.
    - Updated copyright date in file
        'lib/Pod/TreeWalker/Listener.rakumod'.
    - Added a short example of actual use along with other
        README.md tweaks.
    - Added missing dep 'Test::Coverage' to META6.json
    - Adjusted Test::Coverage numbers in xt/

0.0.5  2025-05-06T11:02:12+02:00
    - Changed trait 'is built' to 'is required' on the Listener
      object in the constructor.
    - Completed the link in the README show the actual API in use in 
      the tests. Also listed the file path in the README.
    - Added 'source-url' link to file 'dist.ini'.
    - Added three-OS testing.
    - Renamed 't/lib/TestListener.pm6' to 't/lib/TestListener.rakumod'.
    - Updated copyright date.

0.0.4  2022-05-24T20:43:16+02:00
    - First release in the zef ecosystem.

v0.0.3 - 2015-12-26
    - Make Pod::TreeWalker.walk-pod work with a Seq as well as an Array.
      While internally Raku won't generate a Seq, if you generate Pod
      objects by hand you might end up passing one to walk-pod, and it
      might as well work.

v0.0.2 - 2015-12-25
    - Fixed some edge cases with handling of lists. In some cases lists
      were not ended properly. This doesn't happen with normal Pod
      because of the way list items are always contained in paragraph
      blocks. However, if you created your own Pod objects from scratch
      then the list would not be ended.

v0.0.1 - 2015-12-24
    - First release upon an unsuspecting world.