@@ -4,7 +4,7 @@ source-url = https://github.com/raku-community-modules/Pod-TreeWalker.git
 
 [ReadmeFromPod]
 ; enabled = false
-filename = doc/Pod-TreeWalker.rakudoc
+filename = docs/Pod-TreeWalker.rakudoc
 
 [UploadToZef]
 
@@ -17,4 +17,4 @@ provider = github-actions/macos.yml
 provider = github-actions/windows.yml
 
 [RunAfterBuild]
-cmd = raku --doc=Markdown lib/Pod/TreeWalker/Listener.rakumod > Listener.md
+cmd = raku --doc=Markdown lib/Pod/TreeWalker/Listener.rakumod > LISTENER.md
