@@ -7,9 +7,10 @@ Revision history for Pod-TreeWalker
     - Updated copyright date in file
         'lib/Pod/TreeWalker/Listener.rakumod'.
     - Added a short example of actual use along with other
-        README.md tweaks.
+        README tweaks.
     - Added missing dep 'Test::Coverage' to META6.json
     - Adjusted Test::Coverage numbers in xt/
+    - Fix Windows test
 
 0.0.5  2025-05-06T11:02:12+02:00
     - Changed trait 'is built' to 'is required' on the Listener
